--- a/cviceni/cviceni_1/prvni.html
+++ b/cviceni/cviceni_1/prvni.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Prvni stranka</title>
 </head>
 <body>
-<!--test-->
+<h1>Prvni stranka</h1>
+<a href="https://www.google.com/">
+    <img width="10%" height="10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Giraffa_camelopardalis_reticulata_01.JPG/270px-Giraffa_camelopardalis_reticulata_01.JPG" alt="obrazek">
+</a>
+<form>
+    <label>
+        Jmeno <input type="text">
+    </label> <br>
+    <label>
+        Heslo <input type="password">
+    </label> <br>
+    <button type="submit">OK</button>
+</form>
 </body>
 </html>
