--- a/cviceni/cviceni_1/prvni.html
+++ b/cviceni/cviceni_1/prvni.html
@@ -9,12 +9,12 @@
 <a href="https://www.google.com/">
     <img width="10%" height="10%" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Giraffa_camelopardalis_reticulata_01.JPG/270px-Giraffa_camelopardalis_reticulata_01.JPG" alt="obrazek">
 </a>
-<form>
+<form action="https://akela.mendelu.cz/~lysek/vars.php" method="post">
     <label>
-        Jmeno <input type="text">
+        Jmeno <input name="jmeno" type="text">
     </label> <br>
     <label>
-        Heslo <input type="password">
+        Heslo <input name="heslo" type="password">
     </label> <br>
     <button type="submit">OK</button>
 </form>
